# ece-6460-material

./: deps.bash  release.bash
ece6460_examples/: README.md
ece6460_examples/ece6460_camera_cal_example/: CMakeLists.txt  package.xml
ece6460_examples/ece6460_camera_cal_example/launch/: mono_camera_cal.launch  mono_camera_driver.launch  sim_stereo.launch  stereo_camera_driver.launch
ece6460_examples/ece6460_camera_cal_example/src/: pub_camera_info.py
ece6460_examples/ece6460_camera_cal_example/urdf/: vehicle_model.urdf.xacro
ece6460_examples/ece6460_camera_cal_example/yaml/: sim_params.yaml
ece6460_examples/ece6460_ekf_example/: CMakeLists.txt  package.xml
ece6460_examples/ece6460_ekf_example/cfg/: EkfExample.cfg
ece6460_examples/ece6460_ekf_example/launch/: ekf_example.launch
ece6460_examples/ece6460_ekf_example/rviz/: rviz_config.rviz
ece6460_examples/ece6460_ekf_example/src/: EkfExample.cpp  EkfExample.hpp
ece6460_examples/ece6460_launch_example/: CMakeLists.txt
ece6460_examples/ece6460_launch_example/launch/: param_loader.launch
ece6460_examples/ece6460_marker_example/: CMakeLists.txt  package.xml
ece6460_examples/ece6460_marker_example/src/: MarkerExample.cpp  MarkerExample.hpp  marker_example_node.cpp
ece6460_examples/ece6460_mono_example/: CMakeLists.txt  package.xml
ece6460_examples/ece6460_mono_example/cfg/: LaneDetection.cfg
ece6460_examples/ece6460_mono_example/launch/: lane_detection.launch
ece6460_examples/ece6460_mono_example/src/: LaneDetection.cpp  LaneDetection.hpp  lane_detection_example.cpp
ece6460_examples/ece6460_opencv_example/: CMakeLists.txt
ece6460_examples/ece6460_opencv_example/cfg/: HsvExample.cfg
ece6460_examples/ece6460_opencv_example/src/: HsvExample.cpp  HsvExample.hpp
ece6460_examples/ece6460_pointcloud_example/: CMakeLists.txt  package.xml
ece6460_examples/ece6460_pointcloud_example/launch/: pointcloud_example_bag.launch  pointcloud_example_sim.launch
ece6460_examples/ece6460_pointcloud_example/rviz/: example.rviz
ece6460_examples/ece6460_pointcloud_example/src/: ClusterExample.cpp  ClusterExample.hpp  PointCloudExample.cpp  PointCloudExample.hpp  pointcloud_example_node.cpp
ece6460_examples/ece6460_rosbag_examples/: CMakeLists.txt
ece6460_examples/ece6460_rosbag_examples/src/: DataGeneratorNode.cpp  DataGeneratorNode.hpp
ece6460_examples/ece6460_tf_examples/: CMakeLists.txt  package.xml
ece6460_examples/ece6460_tf_examples/src/: TfLookupExample.cpp  TfLookupExample.hpp  TfPubExample.cpp  TfPubExample.hpp
ece6460_examples/ece6460_transform_examples/: CMakeLists.txt  package.xml
ece6460_examples/ece6460_transform_examples/src/: gps_transform_example.cpp  tf_example1.cpp  tf_example2.cpp
ece6460_examples/ece6460_ulc_example/: CMakeLists.txt
ece6460_examples/ece6460_ulc_example/launch/: run_simulator.launch
ece6460_examples/ece6460_vector_to_quat/: CMakeLists.txt  package.xml
ece6460_examples/ece6460_vector_to_quat/rviz/: vector_to_quat.rviz
ece6460_examples/ece6460_vector_to_quat/src/: VectorToQuat.cpp  VectorToQuat.hpp
homework1-KaiqiaoTian/: Dockerfile  README.md  ci_build.bash  cloudbuild.yaml
homework1-KaiqiaoTian/homework1/: CMakeLists.txt  package.xml
homework1-KaiqiaoTian/homework1/launch/: homework1.launch
homework1-KaiqiaoTian/homework1/src/: Homework1.cpp  Homework1.hpp  homework1_node.cpp
homework1-KaiqiaoTian/homework1/tests/: CMakeLists.txt  homework1.test  homework1_test.py  run_tests.py
homework2-KaiqiaoTian/: README.md
homework2-KaiqiaoTian/homework2/: CMakeLists.txt  package.xml
homework2-KaiqiaoTian/homework2/cfg/: Homework2.cfg
homework2-KaiqiaoTian/homework2/launch/: homework2.launch
homework2-KaiqiaoTian/homework2/src/: Homework2.cpp  Homework2.hpp  homework2_node.cpp
homework2-KaiqiaoTian/homework2/tests/: CMakeLists.txt  homework2.test  homework2_test.py  run_tests.py
homework2-KaiqiaoTian/homework2/yaml/: homework2_scenario.yaml
homework3-KaiqiaoTian/: README.md
homework3-KaiqiaoTian/homework3/: CMakeLists.txt  package.xml
homework3-KaiqiaoTian/homework3/cfg/: homework3.cfg
homework3-KaiqiaoTian/homework3/launch/: homework3.launch
homework3-KaiqiaoTian/homework3/rviz/: homework3.rviz
homework3-KaiqiaoTian/homework3/src/: Homework3.cpp  Homework3.hpp  homework3_node.cpp
homework3-KaiqiaoTian/homework3/tests/: CMakeLists.txt  homework3.test  homework3_test.py  run_tests.py
homework4-KaiqiaoTian/: Dockerfile  README.md  ci_build.bash
homework4-KaiqiaoTian/homework4/: CMakeLists.txt  package.xml
homework4-KaiqiaoTian/homework4/cfg/: Homework4.cfg
homework4-KaiqiaoTian/homework4/launch/: homework4.launch
homework4-KaiqiaoTian/homework4/rviz/: homework4.rviz
homework4-KaiqiaoTian/homework4/src/: Homework4.cpp  Homework4.hpp  ObjectEkf.cpp  ObjectEkf.hpp  homework4_node.cpp
homework4-KaiqiaoTian/homework4/tests/: CMakeLists.txt  homework4.test  homework4_test.py  run_tests.py
homework5-KaiqiaoTian/: README.md
homework5-KaiqiaoTian/homework5/: CMakeLists.txt  package.xml
homework5-KaiqiaoTian/homework5/launch/: homework5.launch
homework5-KaiqiaoTian/homework5/rviz/: homework5.rviz
homework5-KaiqiaoTian/homework5/urdf/: homework5_model.urdf.xacro  sensors.urdf.xacro
homework5-KaiqiaoTian/homework5/worlds/: homework5.world
homework5-KaiqiaoTian/homework5/yaml/: homework5_scenario.yaml  homework5_sim_params.yaml
lead_follow/: CMakeLists.txt  package.xml
lead_follow/cfg/: Lead_follow.cfg
lead_follow/launch/: homework4_lead.launch  lead_follow.launch
lead_follow/rviz/: lead_follow.rviz  lead_follow_2.rviz
lead_follow/scripts/: joystick.py
lead_follow/src/: Lead_follow.cpp  Lead_follow.hpp  ObjectEkf.cpp  ObjectEkf.hpp  lead_follow_node.cpp
lead_follow/urdf/: f150_model.urdf.xacro  fusion_model.urdf.xacro  jeep_model.urdf.xacro  mkz_model.urdf.xacro  pacifica_model.urdf.xacro  vehicle_gazebo.urdf.xacro  vehicle_sensors.urdf.xacro
