<?xml version="1.0"?>
<package format="2">
  <name>ece6460_camera_cal_example</name>
  <version>0.0.0</version>
  <description>
    Examples of how to set up cameras and calibrate them in ROS
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>roslaunch</exec_depend>

</package>
