<?xml version="1.0"?>
<package format="2">
  <name>ece6460_pointcloud_example</name>
  <version>0.0.0</version>
  <description>Example to show how to use ROS and PCL.</description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>pcl_ros</depend>

</package>
