<?xml version="1.0"?>
<package format="2">
  <name>homework1</name>
  <version>0.0.0</version>
  <description>
    Homework 1 for ECE 6460
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

  <test_depend>rostest</test_depend>
</package>
